jummelage de bundle nicolas et morgan ok

--- a/src/Gogole/MainBundle/Resources/views/Main/menu.html.twig
+++ b/src/Gogole/MainBundle/Resources/views/Main/menu.html.twig
@@ -35,8 +35,14 @@
 
                 <li>
 					        <a href="#">Planning</a>
-				        </li>    
+				        </li>
+                <li>
+                  {% include'GogoleUserBundle:Layout:layout.html.twig' %}
+                </li>    
          		  </ul>
+              
+                
+              
           	</div>
         </div>
 </div>
