--- a/src/Gogole/UserBundle/Resources/views/Layout/layout.html.twig
+++ b/src/Gogole/UserBundle/Resources/views/Layout/layout.html.twig
@@ -1,7 +1,7 @@
 
 
     <div class="row">
-        <div class="col-md-offset-8 col-md-4">
+        <div class=" col-md-12">
             <div>
                 {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
                     {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
@@ -11,11 +11,9 @@
                 {% else %}
                     <a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
                 {% endif %}
-            </div>
-            <div>
-             <a href="{{path('fos_user_registration_register')}}">inscription</a>
-            </div>
 
+                <p><a href="{{path('fos_user_registration_register')}}">inscription</a></p>
+            </div>
             {% if app.request.hasPreviousSession %}
                 {% for type, messages in app.session.flashbag.all() %}
                     {% for message in messages %}
