Intégration finie, calendar bug

--- a/src/Gogole/ContactBundle/Resources/views/categorieContact/index.html.twig
+++ b/src/Gogole/ContactBundle/Resources/views/categorieContact/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <h2 class="text-center">Liste de catégorie des contacts</h2>
+    <h2 class="text-center"><span>L</span>iste de catégorie des contacts</h2>
 
     <br />
 
@@ -19,8 +19,8 @@
 
             <table class="table table-hover">
                 <tr>
-                   	<th>Type de contact</th>
-                    <th>Actions</th>
+                   	<th><span>T</span>ype de contact</th>
+                    <th><span>A</span>ctions</th>
                 </tr>
                     
                 {% for entity in entities %}
