--- a/src/Gogole/ContactBundle/Resources/views/contact/index.html.twig
+++ b/src/Gogole/ContactBundle/Resources/views/contact/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'GogoleMainBundle:Main:index.html.twig' %}
 {% block body %}
-	<h2 class="text-center">Liste de contact</h2>
+	<h2 class="text-center"><span>L</span>iste de contact</h2>
 
 	<br />
     <div class="row">
@@ -14,15 +14,15 @@
 
     	<table class="table table-hover">
                 <tr>
-                    <th>Nom</th>
-                    <th>Prenom</th>
-                    <th>E-mail</th>
-                    <th>Téléphone</th>
-                    <th>Commentaire</th>
-                    <th>Date de naissance</th>
-    		        <th>Société</th>
-    		        <th>Catégorie de contact </th>
-                    <th>Actions</th>
+                    <th><span>N</span>om</th>
+                    <th><span>P</span>rénom</th>
+                    <th><span>E</span>-mail</th>
+                    <th><span>T</span>éléphone</th>
+                    <th><span>C</span>ommentaire</th>
+                    <th><span>D</span>ate de naissance</th>
+    		        <th><span>S</span>ociété</th>
+    		        <th><span>C</span>atégorie de contact </th>
+                    <th><span>A</span>ctions</th>
                 </tr>
             
                 {% for entity in entities %}
