--- a/src/Gogole/ContactBundle/Resources/views/societe/index.html.twig
+++ b/src/Gogole/ContactBundle/Resources/views/societe/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'GogoleMainBundle:Main:index.html.twig' %}
 
 {% block body -%}
-    <h2 class="text-center">Liste des sociétés</h2>
+    <h2 class="text-center"><span>L</span>iste des sociétés</h2>
 
     <br />
     <div class="row">
@@ -14,11 +14,11 @@
             
             <table class="table table-hover">
                 <tr>
-                    <th>Nom</th>
-                    <th>Siret</th>
-                    <th>E-mail</th>
-                    <th>Téléphone</th>
-                    <th>Actions</th>
+                    <th><span>N</span>om</th>
+                    <th><span>S</span>iret</th>
+                    <th><span>E</span>-mail</th>
+                    <th><span>T</span>éléphone</th>
+                    <th><span>A</span>ctions</th>
                 </tr>
                     
                     
