--- a/src/Gogole/MainBundle/Resources/views/Main/stylesheet.html.twig
+++ b/src/Gogole/MainBundle/Resources/views/Main/stylesheet.html.twig
@@ -1,11 +1,12 @@
 	    {# <!-- Icone --> #}
-<link rel="icon" type="image/png" href="{{('bundles/gogolemain/images/favicon.png')}}" />
+<link rel="icon" type="image/png" href="{{asset('bundles/gogolemain/images/favicon.png')}}" />
+
 	    {# <!-- Bootstrap css --> #}
 <link rel="stylesheet" type="text/css" href="{{ asset('bundles/gogolemain/css/bootstrap.min.css')}}" />
+
 	    {# <!-- Default css --> #}
 <link rel="stylesheet" type="text/css" href="{{ asset('bundles/gogolemain/css/employe.css')}}" />
-                                
                         
         {# <!-- Calendar --> #}
-<link rel="stylesheet" href="{{ asset('bundles/adesignscalendar/css/fullcalendar/fullcalendar.css') }}" />
-
+{# <link rel="stylesheet" href="{{ asset('bundles/bladetestercalendar/css/calendar-header.css') }}"> #}
+<link rel="stylesheet" href="{{ asset('bundles/bladetestercalendar/css/calendar.css') }}">
