--- a/src/Gogole/TodoBundle/Resources/views/Todo/ModifierTache.html.twig
+++ b/src/Gogole/TodoBundle/Resources/views/Todo/ModifierTache.html.twig
@@ -3,9 +3,35 @@
 
 {% block todo %}
 <div class="row">
-	<h2 class="text-center"> Modifier votre tache</h2>
+	<h2 class="text-center"><span>M</span>odifier votre tache</h2>
 	<div class="col-md-offset-4">
-		{{form(formulaire)}}
+
+		{{ form_start(formulaire) }}
+		{{ form_errors(formulaire) }}
+
+			<div class="form-group">
+				<p><b><span>T</span>ache </b></p>
+				{{ form_widget(formulaire.tache) }}
+			</div>
+
+			<div class="form-group">
+				<p><b><span>D</span>ate d'échéance </b></p>
+				{{ form_widget(formulaire.dateEcheance) }}
+			</div>
+
+			<div class="form-group">
+				<p><b><span>E</span>tat </b></p>
+				{{ form_widget(formulaire.etat) }}
+			</div>
+
+			<input type="submit" value="Valider" class="btn btn-default" />
+
+		{{ form_end(formulaire) }}		    
+
+		<a href="{{ path('stockmanager') }}">
+		    <input type="button" class="btn btn-default" value="Retour" />
+		</a>
+		
 	</div>
 </div>
 {% endblock %}
