--- a/src/Gogole/ContactBundle/Resources/views/categorieContact/edit.html.twig
+++ b/src/Gogole/ContactBundle/Resources/views/categorieContact/edit.html.twig
@@ -1,17 +1,19 @@
 {% extends 'GogoleMainBundle:Main:index.html.twig' %}
 
 {% block body %}
-    <h2 class="text-center">Modifier une catégorie de contact</h2>
+    <h2 class="text-center"><span>M</span>odifier une catégorie de contact</h2>
     <div class="row">
     	<div class="col-md-offset-5">
 			{{ form_start(edit_form) }}
-				<p>{{ form_row(edit_form.typeContact) }}</p>
+				<p><b><span>T</span>ype de contact </b></p>
+				{{ form_widget(edit_form.typeContact) }}
 				<input type="submit" class="btn btn-default" value="Modifier" />
+			
+				<a href=" {{ path('categoriecontact') }}">
+					<input type="button" class="btn btn-default" value="Retour" />
+				</a>
+				
 			{{ form_end(edit_form) }}
-			<a href=" {{ path('categoriecontact') }}">
-				<input type="button" class="btn btn-default" value="Retour" />
-			</a>
-			<br />
 			{{ form(delete_form) }}
 		</div>
 	</div>
