--- a/src/Gogole/ContactBundle/Resources/views/categorieContact/new.html.twig
+++ b/src/Gogole/ContactBundle/Resources/views/categorieContact/new.html.twig
@@ -1,11 +1,13 @@
 {% extends 'GogoleMainBundle:Main:index.html.twig' %}
 
 {% block body %}
-    <h2 class="text-center">Créer une nouvelle catégorie de contact</h2>
+    <h2 class="text-center"><span>C</span>réer une nouvelle catégorie de contact</h2>
     </div class="row">
     	<div class="col-md-offset-5">
 			{{ form_start(form) }}
-				<p>{{ form_row(form.typeContact) }}</p>
+			{{ form_errors(form) }}
+				<p><b><span>T</span>ype de contact </b></p>
+				{{ form_widget(form.typeContact) }}
 				<input type="submit" class="btn btn-default" value="Créer" />
 			{{ form_end(form) }}
 		</div>
