--- a/src/Gogole/ContactBundle/Resources/views/contact/new.html.twig
+++ b/src/Gogole/ContactBundle/Resources/views/contact/new.html.twig
@@ -1,19 +1,45 @@
 {% extends 'GogoleMainBundle:Main:index.html.twig' %}
 
 {% block body %}
-    <h2 class="text-center">Créer un contact</h2>
+    <h2 class="text-center"><span>C</span>réer un contact</h2>
     <div class="row">
     	<div class="col-md-offset-5">
 			{{ form_start(form) }}
-				<p>{{ form_row(form.nomContact) }}</p>
-				<p>{{ form_row(form.prenomContact) }}</p>
-				<p>{{ form_row(form.eMailContact) }}</p>
-				<p>{{ form_row(form.telContact) }}</p>
-				<p>{{ form_row(form.commentaireContact) }}</p>
-				<p>{{ form_row(form.dateDeNaissanceContact) }}</p>
-				<p>{{ form_row(form.societe) }}</p>
-				<p>{{ form_row(form.categorieContact) }}</p>
+			{{ form_errors(form) }}
+				<div class="form-group">
+					<p><b><span>N</span>om  </b></p>
+					{{ form_widget(form.nomContact) }}
+				</div>
+				<div class="form-group">
+					<p><b><span>P</span>rénom </b></p>
+					{{ form_widget(form.prenomContact) }}
+				</div>
+				<div class="form-group">
+					<p><b><span>E</span>-mail </b></p>
+					{{ form_widget(form.eMailContact) }}
+				</div>
+				<div class="form-group">
+					<p><b><span>T</span>éléphone </b></p>
+					{{ form_widget(form.telContact) }}
+				</div>
+				<div class="form-group">
+					<p><b><span>C</span>ommentaire </b></p>
+					{{ form_widget(form.commentaireContact) }}
+				</div>
+				<div class="form-group">
+					<p><b><span>D</span>ate de naissance </b></p>
+					{{ form_widget(form.dateDeNaissanceContact) }}
+				</div>	
+				<div class="form-group">
+					<p><b><span>S</span>ociété </b></p>
+					{{ form_widget(form.societe) }}
+				</div>
+				<div class="form-group">
+					<p><b><span>C</span>atégorie de contact </b></p>
+					{{ form_widget(form.categorieContact) }}
+				</div>	
 				<input type="submit" class="btn btn-default" value="Créer" />
+
 			{{ form_end(form) }}
 		</div>
 	</div>
