--- a/src/Gogole/ContactBundle/Resources/views/societe/new.html.twig
+++ b/src/Gogole/ContactBundle/Resources/views/societe/new.html.twig
@@ -2,17 +2,31 @@
 
 {% block body %}
 
-    <h2 class="text-center">Créer une société</h2>
+    <h2 class="text-center"><span>C</span>réer une société</h2>
     <div class="row">
     	<div class="col-md-offset-5">
 			{{ form_start(form) }}
-				<p>{{ form_row(form.nomSociete) }}</p>
-				<p>{{ form_row(form.siretSociete) }}</p>
-				<p>{{ form_row(form.eMailSociete) }}</p>
-				<p>{{ form_row(form.telSociete) }}</p>	
+			{{ form_errors(form) }}
+				<div class="form-group">
+					<p><b><span>N</span>om de la société </b></p>
+					{{ form_widget(form.nomSociete) }}
+				</div>
+				<div class="form-group">
+					<p><b><span>S</span>iret de la société </b></p>
+					{{ form_widget(form.siretSociete) }}
+				</div>
+				<div class="form-group">
+					<p><b><span>E</span>-mail de la société </b></p>
+					{{ form_widget(form.eMailSociete) }}
+				</div>
+				<div class="form-group">
+					<p><b><span>T</span>éléphone de la société </b></p>
+					{{ form_widget(form.telSociete) }}
+				</div>
 				<input type="submit" name="envoyer" class="btn btn-default" value="Créer" />
-				
-			{{ form_end(form) }}
+
+			{{ form_end(form) }}		    
+
 		</div>
 	</div>
 {% endblock %}
