--- a/src/Gogole/GestionStockBundle/Resources/views/stockManager/edit.html.twig
+++ b/src/Gogole/GestionStockBundle/Resources/views/stockManager/edit.html.twig
@@ -1,11 +1,41 @@
-{% extends '::base.html.twig' %}
+{% extends 'GogoleMainBundle:Main:index.html.twig' %}
 
 {% block body -%}
-    <h1>stockManager edit</h1>
+    <h2 class="text-center"><span>M</span>odifier un produit en stock</h2>
+    <div class="row">
+    	<div class="col-md-offset-5 col-md-4">
+			{{ form_start(edit_form) }}
+			{{ form_errors(edit_form) }}
+				<div class="form-group">
+					<p><b><span>R</span>éférence </b></p>
+					{{ form_widget(edit_form.ref) }}
+				</div>
+				<div class="form-group">
+					<p><b><span>N</span>om </b></p>
+					{{ form_widget(edit_form.nom) }}
+				</div>
+				<div class="form-group">
+					<p><b><span>P</span>rix d'achat </b></p>
+					{{ form_widget(edit_form.pa) }}
+				</div>
+				<div class="form-group">
+					<p><b><span>P</span>rix de vente </b></p>
+					{{ form_widget(edit_form.pv) }}
+				</div>
+				<div class="form-group">
+					<p><b><span>Q</span>uantité en stock </b></p>
+					{{ form_widget(edit_form.qttStock) }}
+				</div>
+				<div class="form-group">
+					<p><b><span>S</span>euil </b></p>
+					{{ form_widget(edit_form.qttSeuil) }}
+				</div>
+				
+			{{ form_end(edit_form) }}		    
 
-    {{ form(edit_form) }}
-
-        <a href="{{ path('stockmanager') }}">
-            <input type="button" value="retour" />
-        </a>
+		        <a href="{{ path('stockmanager') }}">
+		            <input type="button" class="btn btn-default" value="Retour" />
+		        </a>
+	    </div>
+	</div>
 {% endblock %}
