--- a/src/Gogole/UserBundle/Resources/views/Layout/layout.html.twig
+++ b/src/Gogole/UserBundle/Resources/views/Layout/layout.html.twig
@@ -1,26 +1,28 @@
-
-
-    <div class="row">
-        <div class=" col-md-12">
-            <div>
-                    {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
-                    <a href="{{ path('fos_user_security_logout') }}">
-                        {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
-                    </a>
-            </div>
-            {% if app.request.hasPreviousSession %}
-                {% for type, messages in app.session.flashbag.all() %}
-                    {% for message in messages %}
-                        <div class="flash-{{ type }}">
-                            {{ message }}
-                        </div>
-                    {% endfor %}
-                {% endfor %}
+            {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                
+                <a class="pull-right" href="{{ path('fos_user_security_logout') }}">
+                    {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
+                </a>
+            {% else %}
+                <a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
             {% endif %}
 
-            <div>
-                {% block fos_user_content %}
-                {% endblock fos_user_content %}
-            </div>
+
+        {% if app.request.hasPreviousSession %}
+            {% for type, messages in app.session.flashbag.all() %}
+                {% for message in messages %}
+                    <div class="flash-{{ type }}">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endfor %}
+        {% endif %}
+
+        <div>
+            {% block fos_user_content %}
+            {% endblock fos_user_content %}
         </div>
-    </div>
+
+
+
+
