--- a/src/Gogole/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Gogole/UserBundle/Resources/views/Security/login.html.twig
@@ -1,24 +1,33 @@
-{% extends "GogoleMainBundle:Mainview:index.html.twig"%}
-
+{% extends "GogoleMainBundle:Main:connexion.html.twig"%}
 {% trans_default_domain 'FOSUserBundle' %}
 
 {% block fos_user_content %}
-{% if error %}
-    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-{% endif %}
+    {% if error %}
+        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    {% endif %}
 
-<form action="{{ path("fos_user_security_check") }}" method="post">
-    <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+    <div class="row">
+        <h2 class="text-center"><span>C</span>onnexion</h2>
+        <div class="col-md-offset-4 col-md-4 col-md-offset-4 col-sm-offset-4 col-sm-4">
+            <form action="{{ path("fos_user_security_check") }}" method="post">
+                <div class="form-group">
+                    <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
 
-    <label for="username">{{ 'security.login.username'|trans }}</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
+                    <label for="username">{{ 'security.login.username'|trans }}</label>
+                    <input type="text" class="form-control" id="username" name="_username" value="{{ last_username }}" required="required" />
 
-    <label for="password">{{ 'security.login.password'|trans }}</label>
-    <input type="password" id="password" name="_password" required="required" />
+                    <label for="password">{{ 'security.login.password'|trans }}</label>
+                    <input type="password" class="form-control" id="password" name="_password" required="required" />
 
-    <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-    <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
+                    <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
+                    <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
 
-    <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
-</form>
+
+                    <input type="submit" id="_submit" class="btn btn-default pull-right" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+                    <a class="btn btn-default pull-right" href="{{path('fos_user_registration_register')}}">S'inscrire</a>
+                </div>
+            </form>
+        </div>
+    </div>
 {% endblock fos_user_content %}
+	
